# rampart

./: .dockerignore  .editorconfig  .gitignore  .goreleaser.yaml  .npmrc  .tool-versions  .yarnrc.yml  ARCHITECTURE.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  DEPS.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  go.work  go.work.sum  nx.json  package.json  tsconfig.base.json
.github/: dependabot.yml
.github/workflows/: backstage.yml  codeql.yml  dependency-review.yml  e2e.yml  engine.yml  gen-check.yml  integrations.yml  native.yml  parity.yml  release.yml
backstage/: shims.d.ts
backstage/examples/app/: .dockerignore  Dockerfile  README.md  app-config.production.yaml  app-config.yaml  package.json  tsconfig.json
backstage/plugins/rampart/: README.md  app-config.yaml  config.d.ts  package.json  tsconfig.json
backstage/plugins/rampart-backend/: README.md  package.json  tsconfig.json
backstage/plugins/scaffolder-rampart-actions/: README.md  package.json
cli/: README.md  go.mod  go.sum
cli/cmd/rampart/: main.go
cli/internal/commands/: dispatch.go  dispatch_test.go  ingest.go  scan.go  scan_test.go  serve.go  status.go
cli/internal/output/: formatter.go  json.go  sarif.go  text.go
docs/architecture/: README.md
docs/benchmarks/: sbom-parser.md
docs/decisions/: 0005-no-cgo-rust-via-uds.md  0006-yarn-4-vs-pnpm-minimum-release-age.md  0007-parser-packages-outside-internal.md  0008-enablescripts-false-compatible-with-backstage.md  0009-ci-cd-pipeline-architecture.md  0010-golangci-lint-v2-migration.md  0011-v020-scope-commitment.md  0012-auth-boundary-at-engine.md  0013-publisher-domain-split.md  0014-anomaly-ioc-bridge.md  0015-v0.2.2-scope-commitment.md  README.md
docs/migration/: v0.1.x-to-v0.2.0.md
docs/operations/: README.md  auth-providers.md  deployment-patterns.md
docs/performance/: v020-load-test.md
docs/security/: README.md
e2e/: package.json  playwright.config.ts
e2e/tests/: axios-flow.spec.ts  backstage-proxy.spec.ts  native-fallback.spec.ts
engine/: .golangci.yml  Dockerfile  go.mod  go.sum  oapi-codegen.yaml
engine/anomaly/: detector.go  orchestrator.go  orchestrator_test.go
engine/anomaly/maintainerdrift/: detector.go  detector_test.go
engine/anomaly/oidcregression/: detector.go  detector_test.go
engine/anomaly/versionjump/: detector.go  detector_test.go
engine/cmd/engine/: main.go
engine/cmd/gen-lockfile-fixture/: main.go
engine/cmd/sse-demo/: main.go
engine/ingestion/: ingestion.go  ingestion_test.go
engine/internal/api/: chain_test.go  handlers_anomaly.go  handlers_anomaly_test.go  handlers_auth.go  handlers_auth_test.go  handlers_component.go  handlers_component_test.go  handlers_incident.go  handlers_incident_test.go  handlers_ioc.go  handlers_ioc_test.go  handlers_publisher.go  (+11 more)
engine/publisher/: ingestor.go  scheduler.go  scheduler_test.go
integrations/github-action/: README.md  action.yml
integrations/gitlab-component/: README.md  template.yml
integrations/mock-npm-registry/: Dockerfile  README.md  go.mod
integrations/precommit-hook/: .pre-commit-hooks.yaml  README.md  go.mod
integrations/slack-notifier/: Dockerfile  README.md  go.mod
native/: Cargo.toml  Dockerfile  README.md  deny.toml  testdata
native/crates/rampart-native/: Cargo.toml
native/crates/rampart-native-cli/: Cargo.toml
native/crates/rampart-native-cli/src/: main.rs
native/crates/rampart-native/src/: ipc.rs  lib.rs  parser.rs  protocol.rs
native/crates/rampart-native/src/parsers/: cargo.rs  gomod.rs  mod.rs  npm.rs
schemas/: README.md  cloudevents.yaml  native-ipc.md  openapi.yaml
scripts/: seed-catalog.sh  wait-for-engine.sh
scripts/demo-scenarios/: axios-compromise.sh  shai-hulud.sh  vercel-oauth.sh
test/load/: .gitignore  README.md  generate_fixtures.go  load_test.sh
(+148 files in other folders)
