[package]
name = "rampart-native-cli"
description = "rampart — UDS server binary for the Rust lockfile parser."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rampart-native"
path = "src/main.rs"

[dependencies]
rampart-native = { path = "../rampart-native" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
